// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtpInputs /> render 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginHorizontal": 25,
          "marginVertical": 20,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#a1a1a1",
            "borderRadius": 6,
            "borderWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            false,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#a1a1a1",
            "borderRadius": 6,
            "borderWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            false,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#a1a1a1",
            "borderRadius": 6,
            "borderWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            false,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#a1a1a1",
            "borderRadius": 6,
            "borderWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            false,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;

exports[`<OtpInputs /> rendering with error 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginHorizontal": 25,
        },
        undefined,
      ]
    }
  >
    <Text
      testID="errorText"
    >
      ExampleErrorMessage
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginHorizontal": 25,
          "marginVertical": 20,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#a1a1a1",
            "borderRadius": 6,
            "borderWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            Object {
              "color": "#ff0000",
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#a1a1a1",
            "borderRadius": 6,
            "borderWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            Object {
              "color": "#ff0000",
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#a1a1a1",
            "borderRadius": 6,
            "borderWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            Object {
              "color": "#ff0000",
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#a1a1a1",
            "borderRadius": 6,
            "borderWidth": 1,
            "height": 53,
            "margin": 10,
          },
          undefined,
          Object {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        clearTextOnFocus={false}
        keyboardType="phone-pad"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        secureTextEntry={false}
        selectTextOnFocus={true}
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 24,
              "paddingTop": 10,
              "textAlign": "center",
              "width": 40,
            },
            undefined,
            Object {
              "color": "#ff0000",
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;
